// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test creation of a Title control with bad layout 1`] = `
<Title
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  layout={9999}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  title="Test label text"
  visible={true}
  widget={null}
  width=""
>
  <styled.div
    className="ui-title-bar ripple"
    layout={9999}
    style={Object {}}
  >
    <div
      className="ui-title-bar ripple sc-bdVaJa iPGSlL"
      style={Object {}}
    >
      <styled.div
        className="ui-title"
        contentEditable={false}
        direction="right"
        disabled={false}
        focus={false}
        height=""
        id=""
        layout={9999}
        location="none"
        noedit={false}
        nohover={false}
        noripple={false}
        onClick={[Function]}
        selected={false}
        sizing="normal"
        style={Object {}}
        testing={true}
        title="Test label text"
        visible={true}
        widget={null}
        width=""
      >
        <div
          className="ui-title sc-fjdhpX jSXfnS"
          contentEditable={false}
          direction="right"
          disabled={false}
          height=""
          id=""
          onClick={[Function]}
          selected={false}
          style={Object {}}
          title="Test label text"
          width=""
        >
          <Label
            className=""
            contentEditable={false}
            direction="right"
            disabled={false}
            focus={false}
            height=""
            id=""
            layout={9999}
            location="none"
            noedit={false}
            nohover={false}
            noripple={false}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onDoubleClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onUpdate={[Function]}
            selected={false}
            sizing="normal"
            style={Object {}}
            testing={true}
            text="Test label text"
            title="Test label text"
            useedit={false}
            visible={true}
            widget={null}
            width=""
          >
            <span
              className="ui-label label normal"
              contentEditable={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDoubleClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              style={Object {}}
              suppressContentEditableWarning={true}
            >
              Test label text
            </span>
          </Label>
        </div>
      </styled.div>
    </div>
  </styled.div>
</Title>
`;

exports[`Test creation of a Title control with bad layout 2`] = `
<Title
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  layout={9999}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  title="Test label text"
  visible={true}
  widget={null}
  width=""
>
  <styled.div
    className="ui-title-bar ripple"
    layout={9999}
    style={Object {}}
  >
    <div
      className="ui-title-bar ripple sc-bdVaJa iPGSlL"
      style={Object {}}
    >
      <styled.div
        className="ui-title"
        contentEditable={false}
        direction="right"
        disabled={false}
        focus={false}
        height=""
        id=""
        layout={9999}
        location="none"
        noedit={false}
        nohover={false}
        noripple={false}
        onClick={[Function]}
        selected={false}
        sizing="normal"
        style={Object {}}
        testing={true}
        title="Test label text"
        visible={true}
        widget={null}
        width=""
      >
        <div
          className="ui-title sc-fjdhpX jSXfnS"
          contentEditable={false}
          direction="right"
          disabled={false}
          height=""
          id=""
          onClick={[Function]}
          selected={false}
          style={Object {}}
          title="Test label text"
          width=""
        >
          <Label
            className=""
            contentEditable={false}
            direction="right"
            disabled={false}
            focus={false}
            height=""
            id=""
            layout={9999}
            location="none"
            noedit={false}
            nohover={false}
            noripple={false}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onDoubleClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onUpdate={[Function]}
            selected={false}
            sizing="normal"
            style={Object {}}
            testing={true}
            text="Test label text"
            title="Test label text"
            useedit={false}
            visible={true}
            widget={null}
            width=""
          >
            <span
              className="ui-label label normal"
              contentEditable={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDoubleClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              style={Object {}}
              suppressContentEditableWarning={true}
            >
              Test label text
            </span>
          </Label>
        </div>
      </styled.div>
    </div>
  </styled.div>
</Title>
`;

exports[`Test creation of a Title control with default props 1`] = `
<styled.div
  className="ui-title-bar ripple"
  layout={5}
  style={Object {}}
>
  <styled.div
    className="ui-title"
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    height=""
    id=""
    layout={5}
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    onClick={[Function]}
    selected={false}
    sizing="normal"
    style={Object {}}
    testing={true}
    title="Test label text"
    visible={true}
    widget={null}
    width=""
  >
    <Label
      className="test-class"
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      id=""
      layout={5}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDoubleClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onUpdate={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      title="Test label text"
      useedit={false}
      visible={true}
      widget={null}
      width=""
    />
  </styled.div>
</styled.div>
`;

exports[`Test creation of a Title control with even layout 1`] = `
<styled.div
  className="ui-title-bar ripple"
  layout={1}
  style={Object {}}
>
  <styled.div
    className="ui-title"
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    height=""
    id=""
    layout={1}
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    onClick={[Function]}
    selected={false}
    sizing="normal"
    style={Object {}}
    testing={true}
    title="Test label text"
    visible={true}
    widget="widget"
    width=""
  >
    <Label
      className=""
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      id=""
      layout={1}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDoubleClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onUpdate={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      title="Test label text"
      useedit={false}
      visible={true}
      widget="widget"
      width=""
    />
  </styled.div>
  <styled.div
    className="ui-title-widget"
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    height=""
    id=""
    layout={1}
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    onClick={[Function]}
    selected={false}
    sizing="normal"
    style={Object {}}
    testing={true}
    title="Test label text"
    visible={true}
    widget="widget"
    width=""
  >
    widget
  </styled.div>
</styled.div>
`;

exports[`Test creation of a Title control with no layout 1`] = `
<styled.div
  className="ui-title-bar ripple"
  layout={6}
  style={Object {}}
>
  <styled.div
    className="ui-title"
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    height=""
    id=""
    layout={6}
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    onClick={[Function]}
    selected={false}
    sizing="normal"
    style={Object {}}
    testing={true}
    title="Test label text"
    visible={true}
    widget={null}
    width=""
  >
    <Label
      className=""
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      id=""
      layout={6}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDoubleClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onUpdate={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      title="Test label text"
      useedit={false}
      visible={true}
      widget={null}
      width=""
    />
  </styled.div>
</styled.div>
`;

exports[`Test creation of a Title control with quarter layout 1`] = `
<styled.div
  className="ui-title-bar ripple"
  layout={0}
  style={Object {}}
>
  <styled.div
    className="ui-title"
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    height=""
    id=""
    layout={0}
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    onClick={[Function]}
    selected={false}
    sizing="normal"
    style={Object {}}
    testing={true}
    title="Test label text"
    visible={true}
    widget="widget"
    width=""
  >
    <Label
      className=""
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      id=""
      layout={0}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDoubleClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onUpdate={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      title="Test label text"
      useedit={false}
      visible={true}
      widget="widget"
      width=""
    />
  </styled.div>
  <styled.div
    className="ui-title-widget"
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    height=""
    id=""
    layout={0}
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    onClick={[Function]}
    selected={false}
    sizing="normal"
    style={Object {}}
    testing={true}
    title="Test label text"
    visible={true}
    widget="widget"
    width=""
  >
    widget
  </styled.div>
</styled.div>
`;

exports[`Test creation of a Title control with stacked layout 1`] = `
<styled.div
  className="ui-title-bar ripple"
  layout={4}
  style={Object {}}
>
  <styled.div
    className="ui-title"
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    height=""
    id=""
    layout={4}
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    onClick={[Function]}
    selected={false}
    sizing="normal"
    style={Object {}}
    testing={true}
    title="Test label text"
    visible={true}
    widget="widget"
    width=""
  >
    <Label
      className=""
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      id=""
      layout={4}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDoubleClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onUpdate={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      title="Test label text"
      useedit={false}
      visible={true}
      widget="widget"
      width=""
    />
  </styled.div>
  <styled.div
    className="ui-title-widget"
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    height=""
    id=""
    layout={4}
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    onClick={[Function]}
    selected={false}
    sizing="normal"
    style={Object {}}
    testing={true}
    title="Test label text"
    visible={true}
    widget="widget"
    width=""
  >
    widget
  </styled.div>
</styled.div>
`;

exports[`Test creation of a Title control with thirds layout 1`] = `
<styled.div
  className="ui-title-bar ripple"
  layout={3}
  style={Object {}}
>
  <styled.div
    className="ui-title"
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    height=""
    id=""
    layout={3}
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    onClick={[Function]}
    selected={false}
    sizing="normal"
    style={Object {}}
    testing={true}
    title="Test label text"
    visible={true}
    widget="widget"
    width=""
  >
    <Label
      className=""
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      id=""
      layout={3}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDoubleClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onUpdate={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      title="Test label text"
      useedit={false}
      visible={true}
      widget="widget"
      width=""
    />
  </styled.div>
  <styled.div
    className="ui-title-widget"
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    height=""
    id=""
    layout={3}
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    onClick={[Function]}
    selected={false}
    sizing="normal"
    style={Object {}}
    testing={true}
    title="Test label text"
    visible={true}
    widget="widget"
    width=""
  >
    widget
  </styled.div>
</styled.div>
`;

exports[`Test creation of a Title control with threequarter layout 1`] = `
<styled.div
  className="ui-title-bar ripple"
  layout={2}
  style={Object {}}
>
  <styled.div
    className="ui-title"
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    height=""
    id=""
    layout={2}
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    onClick={[Function]}
    selected={false}
    sizing="normal"
    style={Object {}}
    testing={true}
    title="Test label text"
    visible={true}
    widget="widget"
    width=""
  >
    <Label
      className=""
      contentEditable={false}
      direction="right"
      disabled={false}
      focus={false}
      height=""
      id=""
      layout={2}
      location="none"
      noedit={false}
      nohover={false}
      noripple={false}
      onBlur={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      onDoubleClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onUpdate={[Function]}
      selected={false}
      sizing="normal"
      style={Object {}}
      testing={true}
      text="Test label text"
      title="Test label text"
      useedit={false}
      visible={true}
      widget="widget"
      width=""
    />
  </styled.div>
  <styled.div
    className="ui-title-widget"
    contentEditable={false}
    direction="right"
    disabled={false}
    focus={false}
    height=""
    id=""
    layout={2}
    location="none"
    noedit={false}
    nohover={false}
    noripple={false}
    onClick={[Function]}
    selected={false}
    sizing="normal"
    style={Object {}}
    testing={true}
    title="Test label text"
    visible={true}
    widget="widget"
    width=""
  >
    widget
  </styled.div>
</styled.div>
`;

exports[`Test disabling the Title control 1`] = `
<Title
  className=""
  contentEditable={false}
  direction="right"
  disabled={true}
  focus={false}
  height=""
  id=""
  layout={5}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  title="Test label text"
  visible={true}
  widget={null}
  width=""
>
  <styled.div
    className="ui-title-bar"
    layout={5}
    style={Object {}}
  >
    <div
      className="ui-title-bar sc-bdVaJa iPGSlL"
      style={Object {}}
    >
      <styled.div
        className="ui-title"
        contentEditable={false}
        direction="right"
        disabled={true}
        focus={false}
        height=""
        id=""
        layout={5}
        location="none"
        noedit={false}
        nohover={false}
        noripple={false}
        onClick={[Function]}
        selected={false}
        sizing="normal"
        style={Object {}}
        testing={true}
        title="Test label text"
        visible={true}
        widget={null}
        width=""
      >
        <div
          className="ui-title sc-cSHVUG jFbMhe"
          contentEditable={false}
          direction="right"
          disabled={true}
          height=""
          id=""
          onClick={[Function]}
          selected={false}
          style={Object {}}
          title="Test label text"
          width=""
        >
          <Label
            className=""
            contentEditable={false}
            direction="right"
            disabled={true}
            focus={false}
            height=""
            id=""
            layout={5}
            location="none"
            noedit={false}
            nohover={false}
            noripple={false}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onDoubleClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onUpdate={[Function]}
            selected={false}
            sizing="normal"
            style={Object {}}
            testing={true}
            text="Test label text"
            title="Test label text"
            useedit={false}
            visible={true}
            widget={null}
            width=""
          >
            <span
              className="ui-label label normal disabled nohover"
              contentEditable={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDoubleClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              style={Object {}}
              suppressContentEditableWarning={true}
            >
              Test label text
            </span>
          </Label>
        </div>
      </styled.div>
    </div>
  </styled.div>
</Title>
`;

exports[`Test making the Title control invisible 1`] = `
<Title
  className=""
  contentEditable={false}
  direction="right"
  disabled={false}
  focus={false}
  height=""
  id=""
  layout={5}
  location="none"
  noedit={false}
  nohover={false}
  noripple={false}
  onClick={[Function]}
  selected={false}
  sizing="normal"
  style={Object {}}
  testing={true}
  title="Test label text"
  visible={false}
  widget={null}
  width=""
>
  <styled.div
    className="ui-title-bar ripple"
    layout={5}
    style={Object {}}
  >
    <div
      className="ui-title-bar ripple sc-bdVaJa iPGSlL"
      style={Object {}}
    >
      <styled.div
        className="ui-title"
        contentEditable={false}
        direction="right"
        disabled={false}
        focus={false}
        height=""
        id=""
        layout={5}
        location="none"
        noedit={false}
        nohover={false}
        noripple={false}
        onClick={[Function]}
        selected={false}
        sizing="normal"
        style={Object {}}
        testing={true}
        title="Test label text"
        visible={false}
        widget={null}
        width=""
      >
        <div
          className="ui-title sc-chPdSV gNboip"
          contentEditable={false}
          direction="right"
          disabled={false}
          height=""
          id=""
          onClick={[Function]}
          selected={false}
          style={Object {}}
          title="Test label text"
          width=""
        >
          <Label
            className=""
            contentEditable={false}
            direction="right"
            disabled={false}
            focus={false}
            height=""
            id=""
            layout={5}
            location="none"
            noedit={false}
            nohover={false}
            noripple={false}
            onBlur={[Function]}
            onChange={[Function]}
            onClick={[Function]}
            onDoubleClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onUpdate={[Function]}
            selected={false}
            sizing="normal"
            style={Object {}}
            testing={true}
            text="Test label text"
            title="Test label text"
            useedit={false}
            visible={false}
            widget={null}
            width=""
          >
            <span
              className="ui-label label normal invisible"
              contentEditable={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDoubleClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              style={Object {}}
              suppressContentEditableWarning={true}
            >
              Test label text
            </span>
          </Label>
        </div>
      </styled.div>
    </div>
  </styled.div>
</Title>
`;

exports[`Test retrieval of Title props object 1`] = `
Object {
  "className": "",
  "contentEditable": false,
  "direction": "right",
  "disabled": false,
  "focus": false,
  "height": "",
  "id": "",
  "layout": 5,
  "location": "none",
  "noedit": false,
  "nohover": false,
  "noripple": false,
  "onClick": [Function],
  "selected": false,
  "sizing": "normal",
  "style": Object {},
  "testing": true,
  "visible": true,
  "widget": null,
  "width": "",
}
`;
